Fix bugs after merging the last PR